Bringing all providers back