@@ -28,10 +28,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
-import java.util.Collections;
 import java.util.Set;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 /**
  * JAX-RS application
@@ -52,26 +49,6 @@ public class JaxrsApplication extends Application {
     @Bean()
     SecomObjectMapperProvider secomObjectMapperProvider(@Autowired ObjectMapper objectMapper) {
         return new SecomObjectMapperProvider(objectMapper);
-    }
-
-    /**
-     * Initialise the ContainerType Converter Provider bean.
-     *
-     * @return the ContainerType Converter Provider bean
-     */
-    @Bean()
-    ContainerTypeConverterProvider containerTypeConverterProvider() {
-        return new ContainerTypeConverterProvider();
-    }
-
-    /**
-     * Initialise the DigitalSignatureAlgorithmEnum Converter Provider bean.
-     *
-     * @return the DigitalSignatureAlgorithmEnum Converter Provider bean
-     */
-    @Bean()
-    DigitalSignatureAlgorithmConverterProvider digitalSignatureAlgorithmConverterProvider() {
-        return new DigitalSignatureAlgorithmConverterProvider();
     }
 
     /**
@@ -122,7 +99,9 @@ public class JaxrsApplication extends Application {
                 OpenApiResource.class,
                 AcceptHeaderOpenApiResource.class,
                 SecomExceptionMapper.class,
-                InstantConverterProvider.class
+                InstantToS100ConverterProvider.class,
+                ContainerTypeConverterProvider.class,
+                DigitalSignatureAlgorithmConverterProvider.class
         );
     }
 
@@ -137,7 +116,9 @@ public class JaxrsApplication extends Application {
         corsFilter.getAllowedOrigins().add("*");
         corsFilter.setAllowedMethods("OPTIONS, GET, POST, DELETE, PUT, PATCH");
         corsFilter.setAllowCredentials(false);
-        return Collections.singleton(corsFilter);
+        return Set.of(
+                corsFilter
+        );
     }
 
 }
